--- a/styles/config/_variables.scss
+++ b/styles/config/_variables.scss
@@ -24,3 +24,5 @@ $color-box: $color-pink;
 $header-height: 50px;
 
 $border-radius: 5px;
+
+$margin-box: 1.5rem;
