--- a/styles/pages/_desktop.scss
+++ b/styles/pages/_desktop.scss
@@ -1,16 +1,19 @@
 @import "../config/variables";
 
 @media (min-width: $screen-md-min) {
+  $box-margin: $margin-box;
   .desktop-wrapper {
     display: flex;
     flex-wrap: wrap;
 
-    > [class*='col-'] {
-      display: flex;
-      flex-direction: column;
+    > .box {
+      width: calc(50% - #{$box-margin/2});
 
-      .box {
-        flex: 1;
+      &:nth-child(odd) {
+        margin-right: $box-margin/2;
+      }
+      &:nth-child(even) {
+        margin-left: $box-margin/2;
       }
     }
   }
